--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
 #header{
 	margin: 5px 0px;
 	background-color: rgba(10, 10, 10,0.6);
-	
+	color: red;
 	height: 150px;
 	width: 100%;
     
@@ -62,17 +62,21 @@
 #footer{
 	margin: 5px 0px;
 	background-color: rgba(10, 10, 10,0.6);;
-
+	
 	height: auto;
 	width: auto;
     padding: inherit;
 }
-
+#footer p{
+	
+	color: greenyellow;
+}
 
 .heading{
 	height: 150px;
 	width: 100%;
 	text-align: center;
 	padding: 30px 0px;
+	color: red;
 	
 }
